# PerformanceLab

./: .coverage  .gitignore  LICENSE  MANIFESTO.md  PerformanceLab.py  README.md  SCIENTIFIC_PRINCIPLES.md  __init__.py  athlete.py  comparison.py  metrics.py  project_structure.txt  pyproject.toml  readers.py  requirements.txt  sensor.py  session.py  sync.py  tree.txt  workspace.py
app/: __init__.py  app.py
app/components/: __init__.py  _manual_workout_form.py  activity_input.py  athlete_panel.py  elevation_profile.py  import_panel.py  route_map.py  sidebar.py  (+5 more)
data/: athlete.json
docs/: ARCHITECTURE.md  DOMAIN_MODEL.md  FOUNDATIONS.md  ROADMAP.md
examples/: first_session.py
history/: history.py
performancelab/: __init__.py  athlete.py  comparison.py  plots.py  readers.py  sensor.py  session.py  sync.py  workspace.py
tests/: test_analytics.py  test_athlete.py  test_athlete_analytics.py  test_atl.py  test_cadence.py  test_card.py  test_chart.py  test_consistency.py  test_ctl.py  test_daily_load.py  test_dashboard.py  test_efficiency.py  test_elevation.py  test_environment.py  test_event.py  test_eventbook.py  test_fatigue.py  test_feedback.py  test_fit_importer.py  test_goal.py  test_goalbook.py  test_gpx_importer.py  test_heartrate.py  test_history.py  test_pace.py  test_planning.py  test_pmc.py  test_power.py  test_progression.py  test_recovery.py  test_route.py  test_sensors.py  test_sidebar.py  test_storage_json.py  test_thresholds.py  test_time.py  test_training_builder.py  test_training_load.py  test_training_monthly.py  test_training_monthly_builder.py  (+8 more)
(+144 files in other folders)
