[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "performancelab"
version = "0.1.0"
description = "Performance analysis toolkit for endurance athletes."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Pedro Frade"}
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "gpxpy"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["performancelab*"]
